# Coursework-backend

CourseWork_backend/Coursework-backend/: app.py  config.py  email.py  pyproject.toml
CourseWork_backend/Coursework-backend/compose/: Dockerfile
CourseWork_backend/Coursework-backend/templates/email/: email.html
