[tool.poetry]
name = "leha-python-backend"
version = "0.1.0"
description = ""
authors = ["Daniil <39118675+TyPaporotnyk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
fastapi-mail = "^1.4.1"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
black = "^24.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
